HAMDANP5-CF.yml
AWSTemplateFormatVersion: 2010-09-09
Description: >-
  Testing area for AWS: Used a previous template for the project, revamped the userdata to handle containers and DockerHub
Parameters:
  KeyName:
    Description: Name of an existing EC2 KeyPair to enable SSH access to the instance through 
    Type: 'AWS::EC2::KeyPair::KeyName'
    ConstraintDescription: must be the name of an existing EC2 KeyPair.
Mappings:
  AWSRegionAMI: # AMI for Ubuntu server in each supported region 
    us-east-1:   # N. Virginia
    # AMI ID for Ubuntu 20 (ubuntu + apt) - Amazon Linux 2 AMI ami-02e136e904f3da870 (ec2-user + yum)
      HVM64: ami-0ecb62995f68bb549 # Changed ami-id to an Ubtuntu one (same one used from project 1, because yet again: IM BORING)
Resources:
  VPC:
    Type: 'AWS::EC2::VPC'
    Properties:
      CidrBlock: 192.168.0.0/23
      Tags:
        - Key: Application
          Value: !Ref 'AWS::StackId'
        - Key: Name
          Value: HamdanP5-CF-VPC
  Subnet:
    Type: 'AWS::EC2::Subnet'
    Properties:
      VpcId: !Ref VPC
      CidrBlock: 192.168.0.0/24
      Tags:
        - Key: Application
          Value: !Ref 'AWS::StackId'
        - Key: Name
          Value: HamdanP5-CF-Subnet
  InternetGateway:
    Type: 'AWS::EC2::InternetGateway'
    Properties:
      Tags:
        - Key: Application
          Value: !Ref 'AWS::StackId'
        - Key: Name
          Value: HamdanP5-CF-GW
  AttachGateway:
    Type: 'AWS::EC2::VPCGatewayAttachment'
    Properties:
      VpcId: !Ref VPC
      InternetGatewayId: !Ref InternetGateway
  RouteTable:
    Type: 'AWS::EC2::RouteTable'
    Properties:
      VpcId: !Ref VPC
      Tags:
        - Key: Application
          Value: !Ref 'AWS::StackId'
        - Key: Name
          Value: HamdanP5-CF-RT
  Route:
    Type: 'AWS::EC2::Route'
    DependsOn: AttachGateway
    Properties:
      RouteTableId: !Ref RouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref InternetGateway
  SubnetRouteTableAssociation:
    Type: 'AWS::EC2::SubnetRouteTableAssociation'
    Properties:
      SubnetId: !Ref Subnet
      RouteTableId: !Ref RouteTable
  UbuntuIPAddress:
    Type: 'AWS::EC2::EIP'
    DependsOn: AttachGateway
    Properties:
      Domain: vpc
      InstanceId: !Ref PublicUbuntuInstance
      Tags:
      - Key: Name
        Value: HamdanP5-CF-EIP
  SecurityGroup:
    Type: 'AWS::EC2::SecurityGroup'
    Properties:
      VpcId: !Ref VPC
      GroupDescription: Enables ssh access from ip locations from Wright State campus, my personal laptop at home, and within the instances VPC/Subnet, and allows HTTP from anywhere on ports 80 and 8080
      Tags:
        - Key: Name
          Value: HamdanP5-CF-SG
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: '22'
          ToPort: '22'
          CidrIp: 174.98.162.13/32 # allows ssh from my home on the laptop I use
        - IpProtocol: tcp
          FromPort: '22'
          ToPort: '22'
          CidrIp: 130.108.0.0/16  # allows ssh from anywhere in WSU
        - IpProtocol: tcp
          FromPort: '22'
          ToPort: '22'
          CidrIp: 192.168.0.0/23 # alllows ssh from within the VPC/Subnet
        - IpProtocol: -1
          FromPort: '-1'
          ToPort: '-1'
          CidrIp: 192.168.0.0/23 # alllows any traffic from within the VPC/Subnet
        - IpProtocol: tcp
          FromPort: '80'
          ToPort: '80'
          CidrIp: 0.0.0.0/0 # allows HTTP from anywhere on port 80
        - IpProtocol: tcp
          FromPort: '8080'
          ToPort: '8080'
          CidrIp: 0.0.0.0/0 # allows HTTP from anywhere on port 8080
  NetworkACL:
    Type: 'AWS::EC2::NetworkAcl'
    Properties:
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: HamdanP5-CF-NACL
        - Key: Application
          Value: !Ref 'AWS::StackId'
  InboundAllowAllRule:
    Type: AWS::EC2::NetworkAclEntry
    Properties:
      NetworkAclId: !Ref NetworkACL
      RuleNumber: 100
      Protocol: -1
      Egress: false
      RuleAction: allow
      CidrBlock: 0.0.0.0/0
      PortRange:
        From: 1
        To: 65535
  OutboundDenyWttrRule: # created a new nacl outbound rule to deny access/requests to wttr.in, as done previously in Project 1
    Type: AWS::EC2::NetworkAclEntry
    Properties:
      NetworkAclId: !Ref NetworkACL
      RuleNumber: 100
      Protocol: -1
      Egress: true
      RuleAction: deny
      CidrBlock: 5.9.243.187/32 # direct ip address for wttr.in
  OutboundAllowAllRule: 
    Type: AWS::EC2::NetworkAclEntry
    Properties:
      NetworkAclId: !Ref NetworkACL
      RuleNumber: 110
      Protocol: -1
      Egress: true
      RuleAction: allow
      CidrBlock: 0.0.0.0/0
  SubnetNetworkAclAssociation:
    Type: AWS::EC2::SubnetNetworkAclAssociation
    Properties:
      SubnetId:
        Ref: Subnet
      NetworkAclId:
        Ref: NetworkACL
  PublicUbuntuInstance:
    Type: 'AWS::EC2::Instance'
    DependsOn: AttachGateway
    Properties:
      ImageId: !FindInMap [AWSRegionAMI, !Ref "AWS::Region", HVM64]
      InstanceType: t2.medium
      KeyName: !Ref KeyName
      Tags:
        - Key: Application
          Value: !Ref 'AWS::StackId'
        - Key: Name
          Value: HamdanP5-CF-UbuntuAMI
      NetworkInterfaces:
        - GroupSet:
            - !Ref SecurityGroup
          AssociatePublicIpAddress: 'true'
          DeviceIndex: '0'
          DeleteOnTermination: 'true'
          SubnetId: !Ref Subnet
          # the private elastic IP that I used (basically from the previous project):
          PrivateIpAddress: 192.168.0.160
      UserData:
        Fn::Base64:
          !Sub |
            #!/bin/bash -xe
            apt-get update && \
            
            # installs git and docker and other miscellaneous things
            apt-get install -y \
               git \
               htop \
               apache2 \
               docker.io && \
               
            # copies old hostname and changes current hostname to unique one
            cp /etc/hostname /etc/hostname.old && \
            hostnamectl set-hostname Project5-Instance && \

            # starts and enables docker
            systemctl enable docker && \
            systemctl start docker && \

            # fixes docker permissions on default
            sudo usermod -aG docker $USER
            
            # pulls my docker image 
            docker pull admahamdan2005/brawlstars-site:latest && \
            
            # runs docker image in detatched mode (host port 80, user 80), container restarts automatically if system reboots
            docker run -d -p 80:80  admahamdan2005/brawlstars-site:latest --restart unless-stopped && \

            system
            reboot
